--- a/app/src/main/res/menu/menu_contextual01.xml
+++ b/app/src/main/res/menu/menu_contextual01.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/option_one"
         android:title="Search Contact"
         android:icon="@drawable/ic_baseline_search_24"
+        app:showAsAction="always"
         />
     <item
         android:id="@+id/option_two"
         android:title="Add Contact"
         android:icon="@drawable/ic_baseline_person_add_alt_1_24"
+        app:showAsAction="always"
         />
 </menu>
