--- a/app/src/main/res/layout/toolbarchat01.xml
+++ b/app/src/main/res/layout/toolbarchat01.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.MaterialToolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mt_toolbarlogin"
     android:background="@color/main_orange"
     android:textAlignment="center"
+    app:title="Chats"
+    app:navigationIcon="@drawable/ic_baseline_drag_handle_24"
     android:theme="@style/ToolbarTheme">
 
 </com.google.android.material.appbar.MaterialToolbar>
