--- a/app/src/main/res/layout/fragment_create_profile02.xml
+++ b/app/src/main/res/layout/fragment_create_profile02.xml
@@ -7,25 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.CreateProfile.CreateProfile02Fragment">
 
-    <TextView
-        android:id="@+id/tv_ValidarCorreo"
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/bebasneue_regular"
-
-        android:gravity="center"
-        android:text="Foto de perfil"
-        android:textSize="50sp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
 
 
     <com.google.android.material.button.MaterialButton
@@ -100,6 +82,6 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_foto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_ValidarCorreo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
