--- a/app/src/main/res/layout/fragment_login01.xml
+++ b/app/src/main/res/layout/fragment_login01.xml
@@ -183,75 +183,12 @@ tools:context=".Fragments.Login.Login01Fragment">
 
         android:textSize="32dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/tv_ingresarConOtros"
+        app:layout_constraintBottom_toTopOf="@id/tv_crearUnaCuenta"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_olvideMiContrasena" />
-    <TextView
-        android:id="@+id/tv_ingresarConOtros"
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
-        android:fontFamily="@font/rubik_variablefont_wght"
-
-        android:gravity="center_horizontal"
-        android:text="O ingresar con"
-        android:textColor="#021638"
-        android:textSize="16sp"
-
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@id/cl_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_ingresar" />
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toBottomOf="@id/tv_ingresarConOtros"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_crearUnaCuenta"
-
-        android:layout_marginHorizontal="20dp"
-        >
-
-        <ImageButton
-            android:id="@+id/btn_facebook"
-
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btn_google"
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            android:background="@drawable/fb_icon_325x325"
-            android:layout_marginHorizontal="20dp"
-            />
-
-        <ImageButton
-            android:id="@+id/btn_google"
-
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btn_facebook"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            android:background="@drawable/google_logo_png_suite_everything_you_need_know_about_google_newest_0"
-            android:layout_marginHorizontal="20dp"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/tv_crearUnaCuenta"
 
@@ -263,7 +200,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:fontFamily="@font/rubik_variablefont_wght"
         android:gravity="center_horizontal"
 
-        android:text="Crear una cuenta"
+        android:text="O crear una cuenta"
         android:textColor="#021638"
         android:textSize="16sp"
 
@@ -271,7 +208,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_layout" />
+        app:layout_constraintTop_toBottomOf="@id/btn_ingresar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
