--- a/app/src/main/res/layout/toolbar_login.xml
+++ b/app/src/main/res/layout/toolbar_login.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.MaterialToolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:id="@+id/mt_toolbarlogin"
+
     android:background="@color/main_orange"
-    android:textAlignment="center"
     android:theme="@style/ToolbarTheme">
 
 </com.google.android.material.appbar.MaterialToolbar>
