--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistroActivity">
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerViewRegistro"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <include
+        layout="@layout/toolbar_login"
+        android:id="@+id/tb_toolbarlogin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fragmentContainerViewRegistro"
+        />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewRegistro"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tb_toolbarlogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout="@layout/fragment_registro02"
+        tools:layout="@layout/fragment_login01"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
