--- a/app/src/main/res/layout/fragment_registro04.xml
+++ b/app/src/main/res/layout/fragment_registro04.xml
@@ -104,7 +104,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_foto"
+        app:layout_constraintTop_toBottomOf="@+id/btn_siguiente"
         app:layout_constraintVertical_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
