--- a/app/src/main/res/layout/activity_guardar_foto.xml
+++ b/app/src/main/res/layout/activity_guardar_foto.xml
@@ -81,7 +81,7 @@
         android:fontFamily="@font/bebasneue_regular"
 
         android:gravity="center"
-        android:text="Confirmar"
+        android:text="Subir"
         android:textSize="32dp"
 
         android:textStyle="bold"
@@ -89,6 +89,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_omitir"
+        app:layout_constraintVertical_bias="0.0"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_continuar"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="56dp"
+        android:fontFamily="@font/bebasneue_regular"
+
+        android:gravity="center"
+        android:text="Continuar"
+        android:textSize="32dp"
+
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_regresar"
         app:layout_constraintVertical_bias="0.0"/>
 
     <ImageView
