--- a/app/src/main/res/layout/fragment_registro04.xml
+++ b/app/src/main/res/layout/fragment_registro04.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_regresar"
+        android:id="@+id/btnRegresar"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
