--- a/app/src/main/res/layout/activity_guardar_foto.xml
+++ b/app/src/main/res/layout/activity_guardar_foto.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_foto"
         app:layout_constraintVertical_bias="0.0"/>
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_regresar"
+        android:id="@+id/btnRegresar"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
