--- a/app/src/main/res/layout/fragment_registro03.xml
+++ b/app/src/main/res/layout/fragment_registro03.xml
@@ -128,7 +128,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_siguiente"
+        android:id="@+id/btnSiguiente"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -149,7 +149,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_regresar"
+        android:id="@+id/btnRegresar"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
